# SAT

./: CMakeLists.txt  exe.sh  myexe
Sudoku/: sudo1  sudo1.cnf  sudo1.res  sudo2  sudo2.cnf  sudo2.res  sudo3  sudo3.cnf  sudo3.res  sudo4  sudo4.cnf  sudo4.res  sudo5  sudo5.cnf  sudo5.res
head/: Clause.h  ClauseList.h  ClauseMap.h  CreateSudo.h  DPLL.h  Literal.h  LiteralList.h  MyStack.h  SAT.h  Sudoku.h  game.h  helper.h
input_file/: my.cnf  my.res
input_file/base/function/: sat-20.res  unsat-5cnf-30.res
input_file/base/performance/: ais10.res  ais10_0.res  ais10_1.res  sud00009.res  sud00009_0.res  sud00009_1.res
input_file/other/ais/: ais12.res  ais6.res  ais8.res
input_file/sat/M/: bart17.shuffled-231.res  problem12-200.res  problem5-200.res  sud00001.res  sud00009.res  sud00012.res  sud00021.res  sud00079.res  sud00082.res  sud00861.res  tst_v200_c210.res
input_file/sat/S/: 7cnf20_90000_90000_7.shuffled-20.res  problem1-20.res  problem11-100.res  problem2-50.res  problem3-100.res  problem6-50.res  problem8-50.res  problem9-100.res  tst_v25_c100.res
input_file/unsat/: eu-rand_net60-25-10.shuffled-3000.res  php-010-008.shuffled-as.sat05-1171.res  u-problem10-100.res  u-problem7-50.res
source/: Clause.c  ClauseList.c  ClauseMap.c  CreateSudo.c  DPLL.c  Literal.c  LiteralList.c  MyStack.c  SAT.c  Sudoku.c  game.c  helper.c  main.c
